# flight_stack

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  git-submodules-checkout-master.sh  git-submodules-revert.sh  git-submodules-status.sh  git-submodules-update.sh  init.sh  sync_remote_repos.sh
doc/: Pixhawk4.md  (+2 more)
src/amadee/amadee/: CMakeLists.txt  package.xml
src/amadee/amadee_bringup/: CMakeLists.txt  package.xml  record_asctec_thl.sh  record_autolog.sh  record_optitrac.sh  record_outdoor.sh
src/amadee/amadee_bringup/camera_calibration/: mission_camera.yaml
src/amadee/amadee_bringup/configs/apriltag/: settings.yaml  tags.yaml
src/amadee/amadee_bringup/configs/autonomy/: mission_config.yaml  mission_config_bhp_full.yaml  mission_config_bhp_test.yaml  mission_config_dh.yaml  mission_config_mp.yaml
src/amadee/amadee_bringup/configs/camera_calibration/: mission_camera.yaml
src/amadee/amadee_bringup/configs/neuhold_uwb/: uwb_bridge_params.yaml
src/amadee/amadee_bringup/configs/ublox_gps/: c94_m8p_base.yaml  c94_m8p_rover_1.yaml  c94_m8p_rover_2.yaml
src/amadee/amadee_bringup/configs/watchdog/: drivers.ini  nodes.ini  topics.ini
src/amadee/amadee_bringup/launch/: amadee_estimation.launch  amadee_estimators.launch  amadee_navigation.launch  amadee_operator.launch  amadee_recording.launch  amadee_safety.launch  amadee_sensor.launch  amaze.launch  apriltag_detect.launch  aruco_detect.launch  autolog_mag_4.launch  data_recorder.launch  dataset_mocap.launch  detect_tags.launch  fiducial_marker_test.launch  imu_lsm9ds1.launch  lrf_pi.launch  mars_estimation.launch  module_1_data_rec.launch  module_1_ind_data_rec.launch  module_2_data_rec.launch  openvins.launch  optitrac_asctec_pi.launch  optitrac_dronehall.launch  optitrac_px4_pi.launch  optitrack_dronehall.launch  optitrack_px4_mars.launch  optitrack_px4_pi.launch  outdoor_2gps_pi.launch  outdoor_all_gps_pi.launch  outdoor_all_sensors_pi.launch  outdoor_test_pi.launch  outdoor_test_xu4.launch  px4_pi.launch  px4_xu4.launch  realsense_camera.launch  realsense_t265.launch  sensors_module1.launch  sensors_module2.launch  two_gps_pi_only.launch  (+8 more)
src/amadee/amadee_bringup/launch/staged_cleanup/: apriltag_detect.launch  aruco_detect.launch  autolog_mag_4.launch  dataset_mocap.launch  detect_tags.launch  fiducial_marker_test.launch  module_1_data_rec.launch  module_1_ind_data_rec.launch  mv_camera.launch  optitrack_px4_mars.launch  outdoor_2gps_pi.launch  outdoor_all_gps_pi.launch  outdoor_all_sensors_pi.launch  outdoor_test_pi.launch  outdoor_test_xu4.launch  realsense_camera.launch  tv_demo.launch  ueye_cam_no_param.launch  undistort_mission_cam.launch
src/amadee/amadee_bringup/launch/ublox_config/: c94_m8p_rover.yaml
src/amadee/amadee_bringup/record_scripts/: check_pub_rate_of_all_sensors.sh  record_all_gps.sh  record_optitrack_full_setup.sh  record_outdoor.sh  record_outdoor_2gps.sh
src/amadee/amadee_bringup/rviz/: ov_display.rviz
src/amadee/amadee_bringup/trajectories/: T5.csv  T6.csv  T7.csv  T8.csv  T9.csv
src/amadee/amadee_bringup/trajectories/bhp_full/: T10.csv  T11.csv  T12.csv  T13.csv  T14.csv  T6.csv  T7.csv  T8.csv  T9.csv
src/amadee/amadee_bringup/trajectories/bhp_test/: T10.csv  T11.csv  T12.csv  T14.csv  T6.csv  T7.csv  T8.csv  T9.csv
src/amadee/amadee_bringup/trajectories/dh_test/: T7.csv
src/amadee/amadee_bringup/trajectories/mp_full/: T6.csv  T7.csv  T8.csv
src/bringup/: CMakeLists.txt  package.xml
src/bringup/launch/: mission1.launch
src/bw2/bw2/: CMakeLists.txt  package.xml
src/bw2/bw2_bringup/: CMakeLists.txt  package.xml
src/bw2/bw2_bringup/launch/: bw2.launch  bw2_estimation.launch  bw2_navigation.launch  bw2_operator.launch  bw2_recording.launch  bw2_safety.launch  bw2_sensor.launch
src/evb1000_driver/: CMakeLists.txt  LICENSE  README.md  package.xml
src/evb1000_driver/cfg/: dyn_config.cfg
src/evb1000_driver/doc/results/: gen_field_results.bash  gen_narrow_V2_mod2_results.bash  gen_narrow_V2_mod3_results.bash  gen_narrow_results.bash
src/evb1000_driver/include/evb1000_driver/: Base1000.hpp  EVK1000.hpp  ROSdynamic.hpp  TREK1000.hpp
src/evb1000_driver/launch/: default_EVK.launch  default_TREK.launch  default_config.yaml
src/evb1000_driver/msg/: AnchorDistance.msg  RangingMeasurement.msg
src/evb1000_driver/src/: Base1000.cpp  EVK1000.cpp  TREK1000.cpp  main.cpp
src/evb1000_driver/test/: test.cpp
src/flightstack/flightstack/: CMakeLists.txt  package.xml
src/flightstack/flightstack_bringup/: CMakeLists.txt  package.xml
src/flightstack/flightstack_bringup/launch/: fs_estimation.launch  fs_navigation.launch  fs_operator.launch  fs_recording.launch  fs_safety.launch  fs_sensors.launch
src/flightstack/flightstack_scripts/: CMakeLists.txt  package.xml
src/flightstack/flightstack_scripts/driver_scripts/: ids_check.sh  ids_restart.sh  rs_check.sh  rs_restart.sh
src/flightstack/flightstack_scripts/launch_scripts/: flightstack_dev1.sh  flightstack_dev2.sh  flightstack_op.sh  flightstack_remote.sh
src/flightstack/flightstack_scripts/record_scripts/: record_calib.sh  record_full.sh  record_full_dh.sh  record_start_dh.sh  record_start_dual.sh
src/flightstack/flightstack_scripts/store_scripts/: safe_merge_data_multi_dev.sh  safe_merge_data_single_dev.sh
src/flightstack/flightstack_scripts/system_scripts/: kill_cam_node.sh
src/flightstack/template_config/template_bringup/: CMakeLists.txt  package.xml
src/flightstack/template_config/template_scripts/: CMakeLists.txt  package.xml
src/mocap_bridge/: CMakeLists.txt  package.xml
src/mocap_bridge/include/: mocap_bridge.h
src/mocap_bridge/include/utils/: colors.h
src/mocap_bridge/launch/: mocap_bridge.launch
src/mocap_bridge/msg/: ExtCoreState.msg
src/mocap_bridge/src/: mocap_bridge.cpp  mocap_bridge_node.cpp
src/ros_node_killer/: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTORS.md  LICENSE  README.md  package.xml
src/ros_node_killer/include/: ros_node_killer.hpp
src/ros_node_killer/launch/: killer.launch
src/ros_node_killer/src/: main.cpp  ros_node_killer.cpp
(+294 files in other folders)
