<?xml version="1.0"?>
<package format="2">
  <name>mocap_bridge</name>
  <version>0.0.1</version>
  <description>The mocap_bridge package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="alfornasier@email.com">alfornasier</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>LICENSE</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- <url type="website">http://wiki.ros.org/$mocap_bridge</url> -->
  <!-- <url type="repository">http://github.com/$mocap_bridge</url> -->

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <author email="alfornasier@email.com">alfornasier</author>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <!-- <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_Depend> -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>