<?xml version="1.0"?>
<package format="2">
    <name>amadee</name>
    <version>0.1.0</version>
    <description>Amadee launch file collection</description>
    <author>Christian Brommer</author>
    <author>Alessandro Fornasier</author>
    <maintainer email="christian.brommer@aau.at">Christian Brommer</maintainer>
    <maintainer email="alessandro.fornasier@aau.at">Alessandro Fornasier</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <run_depend>realsense_camera</run_depend>
</package>
