<?xml version="1.0"?>
<package format="2">
    <name>bw2_bringup</name>
    <version>0.1.0</version>
    <description>BW2 launch file collection</description>
    <author>Martin Scheiber</author>
    <author>Alessandro Fornasier</author>
    <maintainer email="martin.scheiber@aau.at">Martin Scheiber</maintainer>
    <maintainer email="alessandro.fornasier@aau.at">Alessandro Fornasier</maintainer>

    <license>AAU-CNS</license>

    <buildtool_depend>catkin</buildtool_depend>
</package>
